# car-and-line-detection

./: CMakeLists.txt  Config.cpp  Config.h  GetFeature.cpp  GetFeature.h  README.md  detection.cpp  detection.h  main.cpp  opencvLib.h  train.cpp  train.h
adaboost/: Gen_Imglist.py  pos.vec
img/: Retrain.txt  retrain_pos.txt  test.txt  train.txt
model/adaboost/: cascade.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
python_func/: BuildImgList.py  BuildRetrainImgList.py  GenHardEx.py  Getbbox.py  MadeVedio.py  ParseVedio2Img.py  QuickCompute.py  Validatebbox.py  Validatebbox2.py
tinyxml/: Makefile
